--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
